# DISTRIBUTED-SYSTEM

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  MICROSERVICE-PATTERNS.MD  Makefile  README.md  docker-compose.yml
MICROSERVICE_TEST/: Cargo.toml  SUMMARY.md
MICROSERVICE_TEST/src/: main.rs
MONOLYTIC/: LAYER.MD  LAYER1.MD
MONOLYTIC/RUST-LAYER-SYSTEM/: Cargo.toml  Dockerfile  README.md  db.sqlite3  docker-compose.yml  nginx.conf
MONOLYTIC/RUST-LAYER-SYSTEM/.github/workflows/: ci.yml
MONOLYTIC/RUST-LAYER-SYSTEM/migrations/: 20251019000000_create_users_table.sql  20251019000001_seed_users_table.sql
MONOLYTIC/RUST-LAYER-SYSTEM/src/: auth.rs  cache.rs  config.rs  error.rs  integration_tests.rs  jobs.rs  main.rs  migration.rs  models.rs  rbac.rs  repositories.rs  services.rs  tests.rs  uow.rs
MONOLYTIC/RUST-LAYER-SYSTEM/src/handlers/: admin.rs  auth.rs  health.rs  mod.rs  root.rs  users.rs  v1.rs  v2.rs
MONOLYTIC/RUST-LAYER-SYSTEM/static/: index.html
bff/web-bff/: Cargo.toml  Dockerfile
bff/web-bff/src/: cache.rs  config.rs  error.rs  handlers.rs  main.rs  service_client.rs  tests.rs
docs/architecture/: l2-patterns.md
gateway/: Cargo.toml  Dockerfile
gateway/src/: config.rs  error.rs  handlers.rs  main.rs  service_discovery.rs  tests.rs
messaging/: Cargo.toml
messaging/src/: error.rs  lib.rs  message.rs  publisher.rs  subscriber.rs  tests.rs
microservice-config/: Cargo.toml
microservice-config/src/: lib.rs  tests.rs
observability/: Cargo.toml
observability/src/: lib.rs  logging.rs  metrics.rs  tests.rs  tracing.rs
security/: Cargo.toml
security/src/: auth.rs  error.rs  jwt.rs  lib.rs  tests.rs  tls.rs
services/order-service/: Cargo.toml  Dockerfile
services/order-service/src/: config.rs  error.rs  handlers.rs  main.rs  models.rs  repositories.rs  services.rs  tests.rs
services/user-service/: Cargo.toml  Dockerfile
services/user-service/src/: config.rs  error.rs  handlers.rs  main.rs  models.rs  repositories.rs  services.rs  tests.rs
shared/: Cargo.toml
shared/src/: error.rs  lib.rs  models.rs  utils.rs
tests/: integration_tests.rs  pattern_tests.rs
