[workspace]
members = [
    "gateway",
    "bff/*",
    "services/*",
    "shared",
    "messaging",
    "observability",
    "security",
    "microservice-config",
]
resolver = "2"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres", "uuid", "time"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "limit"] }
http = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
config = "0.14"
dotenvy = "0.15"
moka = { version = "0.12", features = ["future"] }
jsonwebtoken = "9.3.1"
async-nats = "0.33"
tonic = "0.11"
prost = "0.12"
redis = { version = "0.24", features = ["tokio-comp"] }
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
opentelemetry-semantic-conventions = "0.13"
futures = "0.3"
reqwest = "0.11"
rustls = "0.21"
webpki = "0.22"