[package]
name = "web-bff"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "fs", "limit"] }
http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
microservice-config = { path = "../../microservice-config" }
security = { path = "../../security" }
shared = { path = "../../shared" }
reqwest = "0.11"
moka = { workspace = true }